--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,5 +1,7 @@
 <div class="container-geral">
     <div class="container-conteudo">
-        
+        <app-cards></app-cards>
+        <app-cards></app-cards>
+        <app-cards></app-cards>
     </div>
 </div>
