--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -1,1 +1,11 @@
-<p>cards works!</p>
+<div class="card">
+    <div class="card__contents">
+        <div class="card__things">
+            <img src="{{imagePlaceHolder}}" alt="">
+            <div class="text">
+                <h2>{{titlePlaceHoldedr}}</h2>
+                <p>{{textPlaceHolder}}</p>
+            </div>
+        </div>
+    </div>
+</div>
